# pcie-emu

./: .gitignore  AUTHORS  COPYING  Makefile.am  bootstrap.sh  configure.ac
emu/: clock_gen.vhd  emu_top.vhd
emu-server/: Makefile.am  avalon-down.c  avalon-up.c  avalon.c  avalon.h  bar-defs.h  configure.ac  emu-client.c  emu-server.c  emu-server.h  exec-pautina-config.c  exec-pautina-config.h  ghdl-bindings.h  pollpull.c  pollpull.h  rreq-storage.c  rreq-storage.h  socket-util.h  tlp-defs-old.h  tlp-defs.h
emu_tlp_128/: Makefile.am  configure.ac  top.qsf
emu_tlp_128/capability-classes/: cc_base.vhd  cc_channels.vhd  cc_control.vhd  cc_dbg_credit.vhd  cc_dbg_ilink.vhd  cc_dbg_ivc.vhd  cc_dbg_t3dnode.vhd  cc_issue.vhd  cc_meta.vhd  cc_portdesc.vhd  cc_skifch2.vhd  cc_t3dnetwork.vhd  cc_t3dnode.vhd  cclasses.vhd
emu_tlp_128/common/: configure.vhd  counter.vhd  flit.vhd  mux_comb.vhd  ram_sdp_reset.vhd  rfifo.vhd  sync_fifo.vhd  sync_fifo_control.vhd  vdata.vhd
emu_tlp_128/emu/: fifo_phy_fifo_emu.vhd  tlp_io_noPHYs.vhd
emu_tlp_128/flash_manager/: flash_manager.vhd  fm_pkg.vhd
emu_tlp_128/generic/: svnversion.vhd
emu_tlp_128/link/: credit.vhd  ilink_adapter.vhd  link_data.vhd  olink_adapter.vhd
emu_tlp_128/ni/: core_passthru.vhd  core_t3d_network.vhd  core_t3d_node.vhd  ni.vhd
emu_tlp_128/skifch/: down.vhd  msg_ejector.vhd  msg_flit.vhd  msg_flit_counter.vhd  msg_flit_counter_dual.vhd  msg_injector.vhd  parity_fifo.vhd  up.vhd
emu_tlp_128/t3d/: arbiter.vhd  arbiter_dir.vhd  ivc_buffer.vhd  msg_arbiter_client.vhd  msg_curry.vhd  msg_ivc.vhd  msg_ovc.vhd  msg_router.vhd  net_flit.vhd  net_flit_counter.vhd  router_iface.vhd  stdl_matrix.vhd  t3d_topology.vhd
emu_tlp_128/tlp/: config.vhd  fifo_phy_fifo.vhd  rld.vhd  rld_switch.vhd  tlp2rld.vhd  tlp_flit.vhd  tlp_io.vhd  tlp_package.vhd  tlp_switch.vhd
examples/flash/: Chain.cdf  Makefile.am  Makefile.quartus  configure.ac  flash_controller.vhd  flash_manager.vhd  flash_manager_regs.vhd  fm_pkg.vhd  pcie_de_gen1_x8_ast128.qsys  top.qpf  top.qsf  top.sdc  top.stp  top.vhd
examples/flash/app/: app_io.vhd  arbiter.vhd  fifo_loopback.vhd  msg_arbiter_client.vhd  ram_dp.vhd  ram_sdp.vhd  tlp_fifo_loopback.vhd  tlp_markup.vhd  tlp_package.vhd  tlp_rx_128.vhd  tlp_rx_dmx.vhd  tlp_tx_128.vhd  tlp_tx_mux.vhd
examples/flash/megafunc/: buf_fifo32.vhd  fm_fifo128.vhd
examples/flash/qsys/synthesis/: pcie_de_gen1_x8_ast128.qip  pcie_de_gen1_x8_ast128.v
examples/flash/qsys/synthesis/submodules/: alt_arbiter_acq.sv  alt_xcvr_arbiter.sv  alt_xcvr_csr_selector.sv  alt_xcvr_m2s.sv  alt_xcvr_reconfig.sdc  alt_xcvr_reconfig.sv  alt_xcvr_reconfig_adce.sv  alt_xcvr_reconfig_adce_datactrl_sv.sv  alt_xcvr_reconfig_adce_sv.sv  alt_xcvr_reconfig_analog.sv  alt_xcvr_reconfig_analog_sv.sv  alt_xcvr_reconfig_basic.sv  alt_xcvr_reconfig_cal_seq.sv  alt_xcvr_reconfig_cpu.v  alt_xcvr_reconfig_cpu_addr_router.sv  alt_xcvr_reconfig_cpu_addr_router_001.sv  alt_xcvr_reconfig_cpu_cmd_xbar_demux.sv  alt_xcvr_reconfig_cpu_cmd_xbar_demux_001.sv  alt_xcvr_reconfig_cpu_cmd_xbar_mux.sv  alt_xcvr_reconfig_cpu_id_router.sv  alt_xcvr_reconfig_cpu_id_router_001.sv  alt_xcvr_reconfig_cpu_irq_mapper.sv  alt_xcvr_reconfig_cpu_ram.hex  alt_xcvr_reconfig_cpu_ram.sv  alt_xcvr_reconfig_cpu_reconfig_cpu.v  alt_xcvr_reconfig_cpu_reconfig_cpu_test_bench.v  alt_xcvr_reconfig_cpu_rsp_xbar_mux.sv  alt_xcvr_reconfig_dcd.sv  alt_xcvr_reconfig_dcd_align_clk.sv  alt_xcvr_reconfig_dcd_cal.sv  alt_xcvr_reconfig_dcd_cal_sim_model.sv  alt_xcvr_reconfig_dcd_control.sv  alt_xcvr_reconfig_dcd_datapath.sv  alt_xcvr_reconfig_dcd_eye_width.sv  alt_xcvr_reconfig_dcd_get_sum.sv  alt_xcvr_reconfig_dcd_pll_reset.sv  alt_xcvr_reconfig_dcd_sv.sv  alt_xcvr_reconfig_dfe.sv  alt_xcvr_reconfig_dfe_adapt_tap_sim_sv.sv  alt_xcvr_reconfig_dfe_adapt_tap_sv.sv  (+121 more)
examples/loopback/: .gitignore  Makefile.am  bootstrap.sh  configure.ac  emu_conf.vhd  emu_top_cfg.vhd  wrap_emu.vhd
hdllib/common/: ast256.vhd  common.vhd  types.vhd  util.vhd  vdata.vhd
hdllib/emu/: emu_top.vhd  emu_top128.vhd  emu_top256.vhd  emu_top_cfg.vhd  pautina_wrap_emu.vhd  tlp_io_128.vhd  wrap_emu.vhd
include/: addrspace.h  bar-defs.h  ccid-defs.h  devskif.h  emu-client.h  emu-common.h  mk_configuration.h  mmdev.h  msg-header.h  phys.h  processid.h  shared-memory-hugepage.h  shared-memory.h  skif-driver.h  skifch-rank.h  socket-util.h  socket.h  tlp-defs-old.h
mpi-skifch/: Makefile.in  Makefile.sm  Makefile.wompi  skifch_init.c  skifch_misc.c  skifch_work.c
mpi-skifch/include/: afifo-shm.h  afifo.h  fifo.h  iov.h  netaddr.h  processid.h  skifch-lo.h  skifch-misc.h  skifch-pautina.h  skifch-plx.h  skifch-pmc.h  skifch-shm.h  skifch-shmlo.h  skifch-t.h  skifch-t3d.h  skifch.h  skifch1.h  skifch2.h  skifch2shm.h
