# Copyright (c) 2011-2014, Ailamazyan Program Systems Institute (Russian             
# Academy of Science). See COPYING in top-level directory.

lib_LIBRARIES = libemu-server.a libemu-client.a

libemu_server_a_SOURCES = emu-server.c avalon-up.c avalon-down.c rreq-storage.c

libemu_client_a_SOURCES = emu-client.c

AM_CPPFLAGS = -I$(top_srcdir)/../system-po/include


EXTRA_DIST = *.h
